:sparkles: 添加stylelint，commit-msg，less->sass，

--- a/package.json
+++ b/package.json
@@ -15,26 +15,34 @@
     "react-dom": ">=16.8.0"
   },
   "scripts": {
-    "eslint": "eslint --ext .tsx,.ts,.jsx,.js --fix ./src",
     "start": "webpack-dev-server --config config/webpack.config.dev.js --color",
     "lib": "tsc --outDir lib/ --module commonjs",
     "es": "tsc",
     "umd": "webpack --config config/webpack.config.prod.js --color",
     "gulp": "cd config && gulp",
     "build": "npm run umd && npm run lib && npm run es && npm run gulp",
-    "pub": "npm publish --access=public"
+    "pub": "npm publish --access=public",
+    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src && npm run lint:style",
+    "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
+    "prettier": "prettier -c --write \"**/*\"",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx "
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint-staged",
+      "commit-msg": "commitlint -e .git/COMMIT_EDITMSG --verbose"
     }
   },
   "lint-staged": {
-    "*.{tsx,ts,jsx,js}" : [
-      "npm run eslint",
-      "prettier .prettierrc.js --write",
+    "**/*.less": "stylelint --syntax less",
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write",
       "git add"
-    ]
+    ],
+    "**/*.{js,jsx}": "npm run lint-staged:js",
+    "**/*.{js,ts,tsx}": "npm run lint-staged:js"
   },
   "keywords": [
     "react",
@@ -43,7 +51,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/shenck215/react-component.git"
+    "url": "https://github.com/xbzoom/xbzui.git"
   },
   "author": "shenck",
   "license": "ISC",
@@ -56,18 +64,30 @@
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@commitlint/cli": "^8.2.0",
     "@hot-loader/react-dom": "^16.10.2",
     "@types/classnames": "^2.2.9",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/webpack-env": "^1.14.0",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "commitlint-config-gitmoji": "^1.0.1",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jsx-control-statements": "^2.2.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "stylelint": "^12.0.1",
+    "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
+    "tslint": "^5.20.1",
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
     "autoprefixer": "^9.6.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
@@ -81,11 +101,6 @@
     "css-loader": "^3.2.0",
     "dayjs": "^1.8.16",
     "draft-js-prism": "1.0.6",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-jsx-control-statements": "^2.2.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.17.0",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "gulp": "^4.0.2",
@@ -94,15 +109,16 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-filesize": "0.0.6",
+    "gulp-less": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
     "omit": "^1.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
@@ -116,7 +132,6 @@
     "react-dom": "^16.10.2",
     "react-hot-loader": "^4.12.13",
     "react-lifecycles-compat": "^3.0.4",
-    "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "ts-import-plugin": "^1.6.1",
     "typescript": "^3.6.3",
