--- a/package.json
+++ b/package.json
@@ -70,24 +70,35 @@
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/webpack-env": "^1.14.0",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/experimental-utils": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "@typescript-eslint/typescript-estree": "^2.13.0",
     "commitlint-config-gitmoji": "^1.0.1",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-typescript": "^6.3.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-jsx-control-statements": "^2.2.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-unicorn": "^15.0.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "stylelint": "^12.0.1",
-    "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-css-modules": "^2.1.0",
+    "stylelint-config-prettier": "5.3.0",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^19.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.2.0",
     "stylelint-order": "^3.1.1",
     "tslint": "^5.20.1",
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "antd": "^3.26.5",
     "autoprefixer": "^9.6.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
